platform/api-console-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-console
  namespace: pinlog-dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-console
    app.kubernetes.io/instance: api-console
  ports:
    - name: http
      port: 80
      targetPort: http
